--- a/src/pages/login/index.scss
+++ b/src/pages/login/index.scss
@@ -2,26 +2,25 @@ $primary-color: #3498db;
 $background-color: #f5f5f5;
 $text-color: #333;
 $border-radius: 5px;
+
 body {
   font-family: Arial, sans-serif;
   background-color: $background-color;
-
+  margin: 0;
   display: flex;
   justify-content: center;
   align-items: center;
   height: 100vh;
 }
 
-//.login-wrapper {
-//
-//  background-size: cover;
-//  background-position: center;
-//  height: 100vh; /* 确保高度覆盖整个视窗 */
-//  width: 100vw; /* 确保宽度覆盖整个视窗 */
-//  display: flex;
-//  align-items: center;
-//  justify-content: center;
-//}
+.login-wrapper {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  width: 100vw;
+  height: 100vh;
+  background-size: cover;
+}
 
 .login-logo {
   margin-bottom: 20px;
